--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-07-05 14:18+0000\n"
+"POT-Creation-Date: 2016-07-06 07:04+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -277,4 +277,4 @@ msgstr ""
 
 #: access/types/forms.py:385
 msgid "Multiple choices are selectable."
-msgstr ""
+msgstr "Voit valita useita vaihtoehtoja."
