--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-02-08 11:14+0200\n"
+"POT-Creation-Date: 2017-02-09 10:46+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1720,8 +1720,8 @@ msgid "Initialized"
 msgstr "Vastaanotettu"
 
 #: exercise/submission_models.py:54
-msgid "Waiting"
-msgstr "Odottaa"
+msgid "In grading"
+msgstr "Arvosteltavana"
 
 #: exercise/submission_models.py:56
 msgid "Error"
